--- a/Mise à jour index.html
+++ b/Mise à jour index.html
@@ -1,5 +1,5 @@
  
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
         text-shadow: 1px 1px 2px #000;
       }
 
-      .button {
+      .bouton {
         padding: 15px 30px;
         margin: 10px;
         font-size: 18px;
@@ -36,16 +36,14 @@
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
       }
 
-      .button:hover {
+      .bouton:hover {
         background-color: #ddd;
       }
     </style>
   </head>
   <body>
     <h1>Bienvenue sur RencontreConnect</h1>
-    <button class="button" onclick="window.location.href='signup.html'">Inscription</button>
-    <button class="button" onclick="window.location.href='login.html'">Connexion</button>
+    <button class="bouton" onclick="window.location.href='signup.html'">Inscription</button>
+    <button class="bouton" onclick="window.location.href='login.html'">Connexion</button>
   </body>
 </html>
-
-
