--- a/index.html
+++ b/index.html
@@ -1,66 +1,15 @@
- <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>RencontreConnect</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #ff4e50, #f9d423);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: white;
-    }
-
-    h1 {
-      margin-bottom: 40px;
-      text-shadow: 1px 1px 2px #000;
-    }
-
-    .button {
-      padding: 15px 30px;
-      margin: 10px;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-      background-color: white;
-      color: #333;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .button:hover {
-      background-color: #ddd;
-    }
-  </style>
 </head>
 <body>
   <h1>Bienvenue sur RencontreConnect</h1>
-  <button class="button" onclick="window.location.href='signup.html'">Inscription</button>
-  <button class="button" onclick="window.location.href='login.html'">Connexion</button>
+  <p>Site de rencontre basé sur le respect.</p>
 </body>
 </html>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  corrigé index.html avec html valide 
+mise à jour 
