--- a/index.html
+++ b/index.html
@@ -1,51 +1,47 @@
-   <!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RencontreConnect</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #ffccd5, #ffe6e6);
-      color: #333;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #ffe0ec, #fbd3e9);
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
       color: #c2185b;
     }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 2em;
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
     }
-    .buttons {
-      display: flex;
-      gap: 1em;
-      flex-wrap: wrap;
+    p {
+      font-size: 1.1em;
+      color: #333;
+      margin-bottom: 30px;
     }
     .buttons a {
-      padding: 12px 24px;
       background-color: #c2185b;
       color: white;
       text-decoration: none;
+      padding: 12px 20px;
       border-radius: 25px;
+      margin: 10px;
       font-weight: bold;
-      transition: background 0.3s;
+      transition: background 0.3s ease;
     }
     .buttons a:hover {
       background-color: #ad1457;
     }
-    @media (max-width: 600px) {
-      h1 { font-size: 2em; }
-      p { font-size: 1em; }
+    .footer {
+      font-size: 0.9em;
+      color: #555;
+      margin-top: 30px;
     }
   </style>
 </head>
@@ -53,12 +49,16 @@
   <h1>Bienvenue sur RencontreConnect</h1>
   <p>Un site de rencontre basé sur le respect, pour tous.</p>
   <div class="buttons">
-    <a href="#">Créer un compte</a>
-    <a href="#">Se connecter</a>
+    <a href="inscription.html">Créer un compte</a>
+    <a href="connexion.html">Se connecter</a>
     <a href="#">Découvrir</a>
   </div>
+  <div class="footer">Mise à jour : avril 2025</div>
 </body>
 </html>
+
+
+
 
 
 
