--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p>Un site de rencontre basé sur le respect, pour tous.</p>
   <div class="buttons">
     <a href="inscription 1.html">Créer un compte</a>
-    <a href="connexion 1.html">Se connecter</a>
+    <a href="connexion .html">Se connecter</a>
     <a href="#">Découvrir</a>
   </div>
   <div class="footer">Mise à jour : avril 2025</div>
