--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>Bienvenue sur RencontreConnect</h1>
   <p>Un site de rencontre basé sur le respect, pour tous.</p>
   <div class="buttons">
-    <a href="inscription(1).html">Créer un compte</a>
+    <a href="inscription .html">Créer un compte</a>
     <a href="connexion .html">Se connecter</a>
     <a href="#">Découvrir</a>
   </div>
