--- a/inscription (1).html
+++ b/inscription (1).html
@@ -1,26 +1,55 @@
 
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <title>Créer un compte - RencontreConnect</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background-color: #f9f2f4; }
-    form { max-width: 400px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    input, button { width: 100%; padding: 10px; margin: 10px 0; }
-    button { background-color: #d63384; color: white; border: none; border-radius: 4px; cursor: pointer; }
-  </style>
-</head>
-<body>
-  <h1>Créer un compte</h1>
-  <form>
-    <label>Nom d'utilisateur :</label>
-    <input type="text" name="username" required>
-    <label>Email :</label>
-    <input type="email" name="email" required>
-    <label>Mot de passe :</label>
-    <input type="password" name="password" required>
-    <button type="submit">S'inscrire</button>
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Créer un compte - RencontreConnect</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f9f2f4;
+      }
+      form {
+        max-width: 400px;
+        margin: auto;
+        background-color: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      input[type="text"],
+      input[type="email"],
+      input[type="password"] {
+        width: 100%;
+        padding: 10px;
+        margin: 8px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      button {
+        background-color: #d63384;
+        color: white;
+        border: none;
+        padding: 10px;
+        width: 100%;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="text-align:center;">Créer un compte</h1>
+    <form>
+      <label for="username">Nom d'utilisateur :</label>
+      <input type="text" id="username" name="username" required />
+
+      <label for="email">Email :</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="password">Mot de passe :</label>
+      <input type="password" id="password" name="password" required />
+
+      <button type="submit">S'inscrire</button>
+    </form>
+  </body>
 </html>
