--- a/inscription (1).html
+++ b/inscription (1).html
@@ -1,55 +1,46 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Créer un compte - RencontreConnect</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f9f2f4;
-      }
-      form {
-        max-width: 400px;
-        margin: auto;
-        background-color: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      input[type="text"],
-      input[type="email"],
-      input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin: 8px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      button {
-        background-color: #d63384;
-        color: white;
-        border: none;
-        padding: 10px;
-        width: 100%;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <h1 style="text-align:center;">Créer un compte</h1>
+<head>
+    <meta charset="UTF-8">
+    <title>Inscription</title>
+</head>
+<body>
+    <h2>Inscription</h2>
     <form>
-      <label for="username">Nom d'utilisateur :</label>
-      <input type="text" id="username" name="username" required />
+        <label for="nom">Nom :</label>
+        <input type="text" id="nom" required><br><br>
 
-      <label for="email">Email :</label>
-      <input type="email" id="email" name="email" required />
+        <label for="email">Email :</label>
+        <input type="email" id="email" required><br><br>
 
-      <label for="password">Mot de passe :</label>
-      <input type="password" id="password" name="password" required />
+        <label for="motdepasse">Mot de passe :</label>
+        <input type="password" id="motdepasse" required><br><br>
 
-      <button type="submit">S'inscrire</button>
+        <button type="button" onclick="inscription()">S'inscrire</button>
     </form>
-  </body>
+
+    <script>
+        function inscription() {
+            var nom = document.getElementById("nom").value;
+            var email = document.getElementById("email").value;
+            var motdepasse = document.getElementById("motdepasse").value;
+
+            if (nom === "" || email === "" || motdepasse === "") {
+                alert("Veuillez remplir tous les champs.");
+                return;
+            }
+
+            // Stocker les données de l'utilisateur
+            localStorage.setItem("utilisateur_nom", nom);
+            localStorage.setItem("utilisateur_email", email);
+            localStorage.setItem("utilisateur_motdepasse", motdepasse);
+
+            // Connexion automatique
+            localStorage.setItem("utilisateur_connecte", "true");
+
+            // Rediriger vers la page d'accueil
+            window.location.href = "accueil.html";
+        }
+    </script>
+</body>
 </html>
