--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       scroll-behavior: smooth;
+      background-color: #f8f8f8;
     }
     header {
       background-color: #e91e63;
@@ -33,15 +34,41 @@
     }
     section {
       padding: 60px 20px;
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      border-radius: 10px;
+      margin-top: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 {
       color: #c2185b;
     }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    input[type="text"], input[type="email"], input[type="password"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      padding: 10px;
+      background-color: #e91e63;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #d81b60;
+    }
     footer {
-      background: #f1f1f1;
-      padding: 20px;
       text-align: center;
-      font-size: 14px;
+      padding: 20px;
+      background: #f1f1f1;
     }
   </style>
 </head>
@@ -54,35 +81,32 @@
 
   <nav>
     <a href="#accueil">Accueil</a>
-    <a href="#fonctionnalites">Fonctionnalités</a>
-    <a href="#apropos">À propos</a>
-    <a href="#contact">Contact</a>
+    <a href="#inscription">Inscription</a>
+    <a href="#connexion">Connexion</a>
   </nav>
 
   <section id="accueil">
     <h2>Bienvenue sur RencontreConnect</h2>
-    <p>Notre plateforme met l'accent sur le respect, la sécurité et la vraie connexion entre les personnes. Rejoignez une communauté où chaque individu est valorisé et écouté.</p>
+    <p>Notre plateforme favorise les échanges respectueux, sécurisés et sincères.</p>
   </section>
 
-  <section id="fonctionnalites">
-    <h2>Fonctionnalités à venir</h2>
-    <ul>
-      <li>Profils personnalisés avec photo et bio</li>
-      <li>Chat sécurisé avec modération automatique</li>
-      <li>Filtres de recherche avancés par intérêt, région, âge</li>
-      <li>Notifications en temps réel</li>
-    </ul>
+  <section id="inscription">
+    <h2>Créer un compte</h2>
+    <form>
+      <input type="text" placeholder="Nom complet" required />
+      <input type="email" placeholder="Adresse e-mail" required />
+      <input type="password" placeholder="Mot de passe" required />
+      <button type="submit">S'inscrire</button>
+    </form>
   </section>
 
-  <section id="apropos">
-    <h2>Pourquoi nous choisir ?</h2>
-    <p>RencontreConnect est une application inclusive et respectueuse, pensée pour favoriser des rencontres durables. Notre objectif est de créer un espace sécurisé pour tous les utilisateurs.</p>
-    <p>Grâce à des outils de sécurité modernes, une modération humaine, et un design simple, vous pouvez rencontrer des personnes en toute confiance.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Une question, une suggestion ? Écrivez-nous à <a href="mailto:contact@rencontreconnect.com">contact@rencontreconnect.com</a></p>
+  <section id="connexion">
+    <h2>Se connecter</h2>
+    <form>
+      <input type="email" placeholder="Adresse e-mail" required />
+      <input type="password" placeholder="Mot de passe" required />
+      <button type="submit">Connexion</button>
+    </form>
   </section>
 
   <footer>
@@ -91,8 +115,6 @@
 
 </body>
 </html>
-
-
 
 
 
